<resources>
    <string name="app_name">WeCare</string>
    <string name="prefs_theme_key">theme</string>

    <!-- Login Page -->
    <string name="loginButton">LOGIN</string>
    <string name="loginSignUpButton">SIGN UP?</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="forgotLogin">Forgot password?</string>
    <string name="facebook_app_id">299185540609996</string>
    <string name="fb_login_protocol_scheme">fb299185540609996</string>


    <!-- Sign up Page -->
    <string name="signUpEmail">Email</string>
    <string name="signUpName">Name</string>
    <string name="signUpPhone">Phone</string>
    <string name="signUpPassword">6 Digit Password</string>
    <string name="signUpConfirmPassword">Confirm Password</string>
    <string name="signUpButton">SIGN UP</string>

    <!-- Forgot Login Page -->
    <string name="forgotLoginTitle">Forgot password?</string>
    <string name="forgotLoginSubTitle">We just need your registered Email Id to send you reset link.</string>
    <string name="forgotLoginButton">SEND LINK</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="terms">1. WeCare app is created only for the class 453 Mobile Application Development in CSULB.\n\n
    2. It\'s use is solely for research and development of knowledge required to meet the class standards.\n\n
    3. The Ishihara color blindness test is not developed by any of the students participating in WeCare application development.\n\n
    4. Ishihara test is a method from which color blindness can be detected.\n\n
    5. The purpose of using Ishihara test in WeCare app is to enhance user experience.\n\n
    6. Ishihara test doesn\'t medically confirm that a person is suffering from color blindness.\n\n
    7. Under no circumstances the developers of WeCare app or the professor of 453 Mobile application development class can be charged for misleading information,.\n\n
    8. Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.
        By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service..</string>


    <string name="save_settings">Save settings</string>
    <string name="obese">Obese</string>
    <string name="mid_lower">Mid-lower</string>
    <string name="balanced">Balanced</string>
    <string name="super_fit">Super fit</string>
    <string name="identify_you_body_type">Identify you body type</string>
    <string name="none">None</string>
    <string name="osteoporosis">Osteoporosis</string>
    <string name="obesity">Obesity</string>
    <string name="hypertension">Hypertension</string>
    <string name="heart_disease">Heart Disease</string>
    <string name="diabetes">Diabetes</string>
    <string name="_50"><![CDATA[< 50]]></string>
    <string name="_70"><![CDATA[> 70]]></string>


    <string name="title_activity_main">Sample Fitbit Client!</string>
    <string name="login_with_fitbit">Login with Fitbit</string>
    <string name="scopes_granted_format">Scopes Granted: %s</string>
    <string name="user_info">User</string>
    <string name="activity_info">Activity</string>
    <string name="weight">Weight</string>
    <string name="hello_format">Hello %s!</string>
    <string name="devices">Devices</string>
    <string name="welcome">Welcome!</string>
    <string name="heartrate">Heartrate</string>
    <string name="fitbit_logo_description">Fitbit Logo</string>
    <string name="error_loading_devices_format">Error loading devices: %s</string>
    <string name="error_loading_activities_format">Error loading user activities: %s</string>
    <string name="error_loading_user_format">Error loading user: %s</string>
    <string name="scopes_missing_format">`%s` scope(s) required to function correctly.</string>
    <string name="login_title">Login</string>
    <string name="missing_scopes_error">Error logging in. Missing the following required scopes: </string>
    <string name="login_dismissed">Login dismissed or no scopes selected</string>
    <string name="no_data">No data</string>
    <string name="loading">Loading…</string>
    <string name="error_loading_data">Error loading data. Check your internet connection and try
        again later.
    </string>
</resources>


