<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.csulb.wecare.ForgotLoginActivity"
    android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/forgot_login_bg">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="200dip"
                android:layout_height="200dip"
                android:src="@drawable/key" />
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/forgotLoginTitle"
                    android:gravity="center"
                    android:padding="10dip"
                    android:layout_margin="15dip"
                    android:singleLine="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:text="@string/forgotLoginSubTitle"
                    android:gravity="center"
                    android:padding="10dip"
                    android:layout_margin="10dip"/>
                <EditText
                    android:id="@+id/forgotLoginEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg2"
                    android:hint="@string/loginEmail"
                    android:textColorHint="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"
                    android:padding="10dip"
                    android:layout_margin="15dip"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dip"
                    android:imeOptions="actionDone"/>

                <Button
                    android:id="@+id/forgotLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_signup_bg"
                    android:text="@string/forgotLoginButton"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="10dip"
                    android:layout_margin="15dip"
                    android:layout_marginTop="10dip" />

            </LinearLayout>
        </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:background="@color/blur_white"
        android:padding="150dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
    </RelativeLayout>
