<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dip">

            <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/loginFacebookButton"
                style="@style/FacebookLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="2dp"
                facebook:com_facebook_login_text="Facebook" />

            <View
                android:layout_width="1dip"
                android:layout_height="50dip"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dip"
                android:background="@color/lightGray" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/loginGoogleButton"
                style="@style/GoogleSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:elevation="2dip" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="15dip">

            <EditText
                android:id="@+id/loginEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGray"
                android:drawablePadding="10dip"
                android:drawableStart="@drawable/email"
                android:hint="@string/loginEmail"
                android:inputType="textEmailAddress"
                android:padding="10dip"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:background="@android:color/black" />

            <EditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGray"
                android:drawablePadding="10dip"
                android:drawableStart="@drawable/password"
                android:hint="@string/loginPassword"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:padding="10dip"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="vertical">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login_button_bg"
                    android:padding="10dip"
                    android:text="@string/loginButton"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/loginSignUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:padding="10dip"
                    android:text="@string/loginSignUpButton"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/loginForgotTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/forgotLogin"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:background="@color/blur_white"
        android:padding="150dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"  />

</RelativeLayout>